<?xml version="1.0"?>
<package>
  <name>hanp_bag</name>

  <version>0.0.1</version>

  <description>The hanp_bag package</description>

  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>BSD</license>

  <!--  <url website >http://wiki.ors.org/hanp_bag</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>

  <!--  <test_depend>some_pkg</test_depend>  -->

  <!--  <conflict>some_pkg</conflict>  -->

  <!--  <replace>some_pkg</replace>  -->

  <export>
    <!-- <metapackage/> -->

  </export>
</package>
